# xpublish-wms

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pre-commit.yml  publish-to-pypi.yml  tests.yml
docs/source/: how2package4ioos.md
notebooks/: tutorial.ipynb
tests/: test_cf_wms_router.py  test_grids.py  test_plugin.py  test_query.py  test_router.py
xpublish_wms/: __init__.py  cf_wms.py  cf_wms_router.py  dask_connect.py  dask_test.py  dask_wms.py  getmap.py  grid.py  logger.py  mpl_getmap.py  perflog.py  plugin.py  query.py  select.py  utils.py
xpublish_wms/grids/: __init__.py  fvcom.py  grid.py  hycom.py  irregular.py  regular.py  roms.py  selfe.py  triangular.py
xpublish_wms/wms/: __init__.py  get_capabilities.py  get_feature_info.py  get_legend_info.py  get_map.py  get_metadata.py
xpublish_wms/wms/get_map/: __init__.py  main.py  style_types.py  vector_style_utils.py  vector_styles.py
