[metadata]
name = xpublish_wms
description = WMS router for xpublish
author = Matthew Iannucci
author_email = matt.iannucci@rpsgroup.com
url = https://github.com/asascience-open/xpublish-wms
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
zip_safe = False
install_requires =
    xarray
    cf-xarray
    rioxarray>=0.12.2
    xpublish
    Pillow
    matplotlib
python_requires = >=3.8
packages = find:

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
ignore = E203, E501, W503
exclude = xpublish_wms/_version.py
